package com.toggle.server.delivery.domain;

public enum SyncStatus {
    SYNCED,
    PENDING_RESPONSE,
    OUT_OF_SYNC,
    INACTIVE
}
