@startuml
' Suggested data model for Feature Toggle on Kubernetes

hide methods
skinparam classAttributeIconSize 0

title Data Model - Feature Toggle Sync Per Instance

enum ToggleStrategy {
  LOCAL_CACHE
  REMOTE_ALWAYS
}

enum ToggleValueType {
  STRING
  NUMBER
}

enum SyncStatus {
  SYNCED
  PENDING_RESPONSE
  OUT_OF_SYNC
  INACTIVE
}

class FeatureToggle {
  +id: BIGINT <<PK>>
  +publicId: UUIDv7/ULID <<UNIQUE>>
  +name: String
  +maintainer: String
  +enabled: Boolean
  +version: Long
  +updatedAt: Instant
}

class FeatureToggleValue {
  +id: BIGINT <<PK>>
  +publicId: UUIDv7/ULID <<UNIQUE>>
  +toggleId: BIGINT <<FK, UNIQUE>>
  +valueType: ToggleValueType
  +valueRaw: String
  +updatedAt: Instant
}

class ClientInstance {
  +id: BIGINT <<PK>>
  +publicId: UUIDv7/ULID <<UNIQUE>>
  +serviceName: String
  +instanceId: String <<UNIQUE(serviceName, instanceId)>>
  +podName: String
  +namespace: String
  +callbackUrl: String
  +status: String
  +registeredAt: Instant
  +lastHeartbeatAt: Instant
  +lastSeenAt: Instant
}

class ClientToggleSubscription {
  +id: BIGINT <<PK>>
  +publicId: UUIDv7/ULID <<UNIQUE>>
  +clientInstanceId: BIGINT <<FK>>
  +toggleName: String
  +consumeMode: ToggleStrategy <<DEFINED_BY_CLIENT>>
  +createdAt: Instant
}

class ToggleSyncState {
  +id: BIGINT <<PK>>
  +publicId: UUIDv7/ULID <<UNIQUE>>
  +toggleId: BIGINT <<FK>>
  +clientInstanceId: BIGINT <<FK>>
  +targetVersion: Long
  +lastDeliveredVersion: Long
  +uniqueKey: (toggleId, clientInstanceId) <<UNIQUE>>
  +syncStatus: SyncStatus
  +lastDeliveryAttemptAt: Instant
  +lastResponseAt: Instant
  +retryCount: Int
  +lastError: String
}

class ToggleDeliveryEvent {
  +id: BIGINT <<PK>>
  +publicId: UUIDv7/ULID <<UNIQUE>>
  +toggleId: BIGINT <<FK>>
  +clientInstanceId: BIGINT <<FK>>
  +httpMethod: String
  +requestUrl: String
  +requestBodyHash: String
  +responseCode: Int
  +responseBody: String
  +attempt: Int
  +createdAt: Instant
}

FeatureToggle "1" -- "0..*" ToggleSyncState : sync state
FeatureToggle "1" -- "0..1" FeatureToggleValue : optional value
ClientInstance "1" -- "0..*" ToggleSyncState : receives
ClientInstance "1" -- "0..*" ClientToggleSubscription : subscribes
FeatureToggle "1" -- "0..*" ClientToggleSubscription : consumed by
ToggleSyncState "1" -- "0..*" ToggleDeliveryEvent : delivery history

note bottom of ToggleSyncState
Control granularity: toggle + instance (pod).
This shows exactly which replicas are synchronized.
Numeric PK/FK values reduce join cost and index size.
end note

note bottom of ClientInstance
One record per active pod in Kubernetes.
Removal happens through deregister during shutdown or heartbeat expiration.
end note

note bottom of ClientToggleSubscription
MVP: the strategy is defined by the client and applied by the local library.
The server does not govern or validate strategy at this stage.
end note

note bottom of FeatureToggle
Value is optional for the MVP.
When there is no value child object, the toggle works only as a boolean.
When present, the type must be declared (STRING or NUMBER).
end note

note bottom of FeatureToggleValue
Optional child object used to avoid duplicated fields on the main entity.
valueRaw transports the value; valueType defines how the client interprets it.
end note

note "Recommended performance pattern for RDBMS:\ninternal BIGINT PK + public UUIDv7/ULID identifier.\nAvoids index fragmentation typical of random UUID primary keys." as N1
FeatureToggle .. N1

@enduml
